<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">手购全球</string>
    <string name="hint_search_text">轻击搜索号码</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_header_hint_success">刷新成功</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="contacts_num">共<xliff:g id="num">%d</xliff:g>位联系人
    </string>
    <string name="text_incoming_call">来电</string>
    <string name="text_outgoing_call">去电</string>
    <string name="text_missed_call">未接</string>
    <string name="text_time_hour"><xliff:g id="h">%d</xliff:g>小时<xliff:g id="m">%d</xliff:g>分<xliff:g id="s">%d</xliff:g>秒
    </string>
    <string name="text_time_minute"><xliff:g id="m">%d</xliff:g>分<xliff:g id="s">%d</xliff:g>秒
    </string>
    <string name="text_time_second"><xliff:g id="s">%d</xliff:g>秒
    </string>
    <string name="text_time_no_second">已拨</string>
    <string name="activity_title_contact_detail">联系人详情</string>
    <string name="activity_title_search">搜索</string>
    <string name="title_warning">提示</string>
    <string name="action_refresh">刷新</string>
    <string name="action_back">后退</string>
    <string name="action_close">关闭</string>
    <string name="action_forward">前进</string>
    <string name="action_home">首页</string>
    <string name="action_open_in_browser">用浏览器打开</string>
    <string name="title_activity_login">用户登录</string>
    <string name="title_activity_change_pwd">修改密码</string>
    <string name="title_activity_register">用户注册</string>
    <string name="title_activity_balance_recharge">账户充值</string>
    <string name="title_activity_backups">数据备份</string>
    <string name="title_activity_settings">程序设置</string>
    <string name="func_show_incoming_info">显示来电信息</string>
    <string name="func_backup_and_restore">备份/恢复</string>
    <string name="func_about">关于我们</string>
    <string name="func_advice">意见反馈</string>
    <string name="func_share">推荐好友</string>
    <string name="func_bug_level">日志级别</string>
    <string name="func_check_update">检查更新</string>
    <string name="func_more_app">更多应用</string>
    <string name="title_activity_orders">订单列表</string>
    <string name="title_activity_user_wallet">我的钱包</string>
    <string name="title_activity_product">商品详情</string>
    <string name="title_activity_news_list">所有消息</string>
    <string name="title_activity_news">消息详情</string>
    <string name="title_activity_qr">二维码/条码</string>
    <string name="title_activity_star_list">我的收藏</string>
    <string name="title_activity_balance_log">交易记录</string>
    <string name="title_activity_add_order">增加订单</string>
    <string name="title_activity_address_list">收货地址管理</string>
    <string name="title_activity_address_add">增加收货地址</string>
    <string name="title_activity_address_edit">编辑收货地址</string>
    <string name="title_activity_advice">意见反馈</string>
    <string name="title_activity_shop_cart">购物车</string>
    <string name="title_activity_order_detail">订单详情</string>
    <string name="title_activity_pay_by_balance">余额支付</string>
    <string name="title_activity_callback_info">回拨信息</string>
    <string name="title_activity_callback_recharge">回拨充值卡充值</string>
    <string name="title_activity_callback_call_log_list">呼叫记录</string>
    <string name="title_activity_callback_recharge_log_list">充值记录</string>
    <string name="title_activity_callback_call_waiting">呼叫等待</string>
    <string name="title_activity_reset_pwd">重置密码</string>
    <string name="title_activity_user_upgrade">用户等级升级</string>
    <string name="title_activity_pay_by_shop_card">商城卡支付</string>
    <string name="title_activity_user_point_log">积分记录</string>
    <string name="title_activity_withdraw">余额提现</string>
    <string name="title_activity_withdraw_list">余额提现列表</string>
    <string name="title_activity_user_bank_list">银行卡列表</string>
    <string name="title_activity_user_bank_add">添加银行卡</string>
    <string name="title_activity_query_user_balance">查询余额</string>
    <string name="title_activity_pay_by_alipay">支付宝支付</string>
    <string name="title_activity_pay_by_wxpay">微信支付</string>
    <string name="title_activity_callback_recharge_list">回拨充值方式</string>
    <string name="title_activity_shengxian">生鲜</string>
    <string name="title_activity_huodong">活动</string>
    <string name="title_activity_user_edit">实名认证</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="downloading">正在下载</string>
    <string name="update_title">版本升级</string>
    <string name="title_activity_order_comment">订单评价</string>
    <string name="title_activity_user_agent_info">用户代理信息</string>
    <string name="title_activity_pay_list">选择支付方式</string>
    <string name="pay_success">支付成功</string>
    <string name="title_activity_recharge_data_traffic">流量充值</string>
    <string name="title_activity_product_history_list">浏览记录</string>
    <string name="title_activity_recharge_data_traffic_list">流量充值记录</string>
    <string name="title_activity_point_product_shop">积分商城</string>
    <string name="title_activity_point_product">商品信息</string>
    <string name="title_activity_point_order_add">订单信息</string>
    <string name="title_activity_point_order_list">积分订单列表</string>
    <string name="title_activity_shop_products">微店商品</string>
    <string name="title_activity_shop_list">微店列表</string>
    <string name="title_activity_share">分享</string>
    <string name="title_activity_referrer_user_list">推荐列表</string>
    <string name="title_activity_agent_user_list">下级代理列表</string>
    <string name="title_activity_user_referrer_info">我的分销</string>
    <string name="title_activity_user_share_profit_list">我的业绩</string>
    <string name="title_activity_user_agent_share_profit_list">我的代理商业绩</string>
    <string name="dialog_title_bug_level">日志记录级别</string>
    <string name="auto_update_log">自动上报错误日志</string>
    <string name="log_tips">提示：日志级别越高记录的信息越详细，可以让开发者更全面的定位错误，但记录的越详细相应的日志文件则越大，建议选择级别3</string>
    <string name="menu_choose_pic">从图片选择</string>
    <string name="app_picker_name">应用</string>
    <string name="bookmark_picker_name">书签</string>
    <string name="button_add_calendar">添加至日程表</string>
    <string name="button_add_contact">添加联系人</string>
    <string name="button_book_search">打开图书搜索</string>
    <string name="button_custom_product_search">自定义搜索</string>
    <string name="button_dial">拨打电话</string>
    <string name="button_email">发送 E-mail</string>
    <string name="button_get_directions">获取地址</string>
    <string name="button_mms">发送彩信</string>
    <string name="button_ok">确定</string>
    <string name="button_open_browser">打开浏览器</string>
    <string name="button_product_search">打开商品搜索</string>
    <string name="button_search_book_contents">搜索图书内容</string>
    <string name="button_share_app">分享应用</string>
    <string name="button_share_bookmark">分享书签</string>
    <string name="button_share_by_email">通过 E-mail 分享</string>
    <string name="button_share_by_sms">通过短信分享</string>
    <string name="button_share_clipboard">分享剪切板</string>
    <string name="button_share_contact">分享联系人</string>
    <string name="button_show_map">显示地图</string>
    <string name="button_sms">发送短信</string>
    <string name="button_web_search">网页搜索</string>
    <string name="button_wifi">连接到网络</string>
    <string name="contents_contact">联系人信息</string>
    <string name="contents_email">E-mail 地址</string>
    <string name="contents_location">经纬度</string>
    <string name="contents_phone">电话号码</string>
    <string name="contents_sms">短信号码</string>
    <string name="contents_text">纯文本</string>
    <string name="history_clear_one_history_text">删除</string>
    <string name="history_clear_text">删除历史记录</string>
    <string name="history_email_title">条码扫描器的历史</string>
    <string name="history_empty">空</string>
    <string name="history_empty_detail">没有历史记录</string>
    <string name="history_send">发送历史记录</string>
    <string name="history_title">历史记录</string>
    <string name="menu_encode_mecard">使用MECARD</string>
    <string name="menu_encode_vcard">使用vCard</string>
    <string name="menu_help">帮助</string>
    <string name="menu_history">历史记录</string>
    <string name="menu_settings">设置</string>
    <string name="menu_share">创建二维码</string>
    <string name="msg_bulk_mode_scanned">批量扫描模式：条码已扫描并保存</string>
    <string name="msg_camera_framework_bug">很遗憾，Android 相机出现问题。你可能需要重启设备。</string>
    <string name="msg_default_format">格式</string>
    <string name="msg_default_meta">元数据</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">请将条码置于取景框内扫描。</string>
    <string name="msg_default_time">时间</string>
    <string name="msg_default_type">类型</string>
    <string name="msg_encode_contents_failed">无法生成条码。</string>
    <string name="msg_error">错误</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">抱歉，无法打开应用。条码内容可能无效。</string>
    <string name="msg_invalid_value">值无效</string>
    <string name="msg_redirect">重定向</string>
    <string name="msg_sbc_book_not_searchable">抱歉，无法找到此图书。</string>
    <string name="msg_sbc_failed">抱歉，搜索时遇到错误。</string>
    <string name="msg_sbc_no_page_returned">无页面返回</string>
    <string name="msg_sbc_page">页面</string>
    <string name="msg_sbc_results">结果</string>
    <string name="msg_sbc_searching_book">搜索图书…</string>
    <string name="msg_sbc_snippet_unavailable">摘录不可用</string>
    <string name="msg_share_explanation">您可以通过在自己的手机上显示条码，并使用其它手机扫描此条码的方式进行分享</string>
    <string name="msg_share_text">或键入一些文字</string>
    <string name="msg_sure">确定吗？</string>
    <string name="msg_unmount_usb">抱歉，无法访问 SD 卡。</string>
    <string name="preferences_actions_title">扫描成功</string>
    <string name="preferences_auto_focus_title">自动对焦</string>
    <string name="preferences_auto_open_web_title">自动打开网页</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存多个条码</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪贴板</string>
    <string name="preferences_custom_product_search_summary"
            formatted="false">替换：％s=内容，％f=格式，％t=类型
    </string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="preferences_decode_1D_industrial_title">一维码：工业</string>
    <string name="preferences_decode_1D_product_title">一维码：商品</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (测试)</string>
    <string name="preferences_decode_QR_title">二维码</string>
    <string name="preferences_device_bug_workarounds_title">设备适配</string>
    <string name="preferences_disable_barcode_scene_mode_title">不进行条形码场景匹配</string>
    <string name="preferences_disable_continuous_focus_summary">使用标准对焦模式</string>
    <string name="preferences_disable_continuous_focus_title">不持续对焦</string>
    <string name="preferences_disable_exposure_title">不曝光</string>
    <string name="preferences_disable_metering_title">不使用距离测量</string>
    <string name="preferences_front_light_auto">自动</string>
    <string name="preferences_front_light_off">关</string>
    <string name="preferences_front_light_on">开</string>
    <string name="preferences_front_light_summary">设置闪光灯模式</string>
    <string name="preferences_front_light_title">闪光灯</string>
</resources>