<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Libit保留所有版权，如有疑问联系QQ：308062035
  ~ Copyright (c) 2016.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="1"
        android:showAsAction="withText|ifRoom"
        android:title="@string/menu_share"
        android:visible="false"/>
    <item
        android:id="@+id/menu_choose_pic"
        android:icon="@android:drawable/ic_menu_gallery"
        android:orderInCategory="1"
        android:showAsAction="withText|ifRoom"
        android:title="@string/menu_choose_pic"/>
    <item
        android:id="@+id/menu_history"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:orderInCategory="2"
        android:showAsAction="withText|ifRoom"
        android:title="@string/menu_history"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="3"
        android:showAsAction="withText"
        android:title="@string/menu_settings"
        android:visible="false"/>
    <item
        android:id="@+id/menu_help"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="4"
        android:showAsAction="withText"
        android:title="@string/menu_help"
        android:visible="false"/>
</menu>